// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<a
  className="cf-link a b c d e f g h i"
  href="#!"
  id="link"
  onClick={[Function]}
  role="tab"
>
  CardToolbarLink
</a>
`;

exports[`should render 2`] = `
"
.a {
  display: inline-block
}

.b {
  margin-right: 1em
}

.c::after {
  display: inline-block
}

.d::after {
  content: '\\\\f003'
}

.e::after {
  font-family: \\"cloudflare-font\\"
}

.f::after {
  font-style: normal
}

.g::after {
  font-weight: normal
}

.h::after {
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease
}

.i::after {
  transform: initial;
  -webkit-transform: initial
}
"
`;

exports[`should render with isActive 1`] = `
<a
  className="cf-link a b c d e f g h i"
  href="#!"
  id="link"
  onClick={[Function]}
  role="tab"
>
  CardToolbarLink
</a>
`;

exports[`should render with isActive 2`] = `
"
.a {
  display: inline-block
}

.b {
  margin-right: 1em
}

.c::after {
  display: inline-block
}

.d::after {
  content: '\\\\f003'
}

.e::after {
  font-family: \\"cloudflare-font\\"
}

.f::after {
  font-style: normal
}

.g::after {
  font-weight: normal
}

.h::after {
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease
}

.i::after {
  transform: rotate(90deg);
  -webkit-transform: rotate(90deg)
}
"
`;
